compact.css
body {
    font-family: 'Inclusive Sans', sans-serif;
    font-display: swap;

    background: #647784;

    background-image: linear-gradient(
        rgba(0, 0, 0, 0.5), 
        rgba(0, 0, 0, 0.5)
      ), url('images/peaks.webp');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    margin:0;

    text-align: center;
}

#title_mobile {
    font-size: 37px;
    color: white;
    display: block !important;
}

#main_content {
    margin-top: 10px;
    margin-bottom: 50px;
    margin-left: 30px;
    margin-right: 30px;
    width: calc(100vw - 60px);
    text-align: center;
    display: inline-flex;
    flex-direction: column;
    justify-content: center;
}

/* General Schedule Styling */
.schedule_div {    
    color: white;
    background: RGBA(0, 0, 0, 0.5);

    border: 2px solid white;
    border-radius: 25px;

    position: relative;
}

.schedule_table {
    border: 2px solid white;
    border-collapse: collapse;

    width: calc(100% - 50px);
    margin-left: 25px;
}

.schedule_table th, .schedule_table td {
    border: 2px solid white;
}

.table_period {
    font-size: 24px;
    width: 0px;
    padding: 10px;
}

.table_location {
    padding: 0px;
}

.table_location.table_top {
    font-size: 24px;
}

.table_subj {
    font-size: 20px;
}

.table_subjNote {
    margin-top: -10px;
    font-size: 16px;
}

.schedule_date {
    font-size: 22px;
}

/* Main Schedule Styling */


.block_select {
    width: 35px;
    height: 35px;
    color: white;
    font-size: 20px;
    font-family: 'Inclusive Sans', sans-serif;
    background-color: rgba(0, 0, 0, 0.2);
    border: 1px solid white;
    border-radius: 25px;
    transition: background-color 0.3s, color 0.3s;
}

#block_select_x {
    position: absolute;
    right: 50px;
    top: 10px;
}

#block_select_y {
    position: absolute;
    right: 10px;
    top: 10px;
}

.block_select:hover {
    background-color: rgba(0, 0, 0, 0.3);
    transition: background-color 0.3s, color 0.3s;
}

.block_select:active {
    background-color: rgba(0, 0, 0, 0.5);
    transition: background-color 0.3s, color 0.3s;
}

.block_select:disabled {
    background-color: white;
    color: black;
    transition: background-color 0.3s, color 0.3s;
}

#d0_date {
    font-size: 30px;
    color: white;
    margin-bottom: -10px;
}

#d0_day {
    font-size: 20px;
    color: white;
    margin-bottom: 30px;
}

#d0_notes {
    font-size: 20px;
    margin-top: 30px;
}

/* Main Content Message Board */
hr {
    color: white;
}

#message_board_div {
    margin-top: 50px;
    width: 100%;
    height: 400px;
    text-align: left;
    color: white;

    position: relative;
}

#message_board_title {
    display: none;
}

#message_board_subtitle {
    font-size: 30px;
}

#message_board_footer_hr {
    position: absolute;
    bottom: 60px;
    width: 100%;
}

#message_board_footer {
    position: absolute;
    bottom: 0px;
    width: 100%;
}

/* Full 2 Week Schedules */
#schedules_week1 {
    margin-top: 40px;
    margin-left: 20px;
    margin-right: 20px;
    text-align: center;
}

#schedules_week1 .schedule_div {
    margin-bottom: 20px;
}

#schedules_week2 {
    margin-top: 100px;
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 40px;
    text-align: center;
}

#schedules_week2 .schedule_div {
    margin-bottom: 20px;
}

